# Lifetra

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
bindings/lifetra-py/: Cargo.toml  pyproject.toml
bindings/lifetra-py/examples/: minimal_usage.py  smoke_test.py
bindings/lifetra-py/src/: lib.rs
crates/lifetra-causal/: Cargo.toml
crates/lifetra-causal/src/: lib.rs
crates/lifetra-core/: Cargo.toml
crates/lifetra-core/src/: lib.rs
crates/lifetra-entity/: Cargo.toml
crates/lifetra-entity/src/: lib.rs
crates/lifetra-orient/: Cargo.toml
crates/lifetra-orient/src/: lib.rs
crates/lifetra-reflect/: Cargo.toml
crates/lifetra-reflect/src/: lib.rs
crates/lifetra-resonance/: Cargo.toml
crates/lifetra-resonance/src/: lib.rs
crates/lifetra-synergy/: Cargo.toml
crates/lifetra-synergy/src/: lib.rs
crates/lifetra-trajectory/: Cargo.toml
crates/lifetra-trajectory/src/: lib.rs
docs/: colab-demo-en.md  colab-demo-ru.md
examples/: idea_evolution.rs
notebooks/: colab_demo.ipynb
src/: lib.rs
tests/: entity_state.rs
