[package]
name = "lifetra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lifetra-causal.workspace = true
lifetra-orient.workspace = true
lifetra-trajectory.workspace = true
lifetra-reflect.workspace = true
lifetra-resonance.workspace = true
lifetra-synergy.workspace = true

[lib]
name = "lifetra_core"
path = "src/lib.rs"
